--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
+          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+            <a href="mailto:name@email.com">name@email.com</a>
+          </div>
           <h1 class="mb-0">Nawaffarras
             <span class="text-primary">Mahendika</span>
           </h1>
