--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <p>Hi there, I'm</p>
+          <font size="5" color="red">Hi there, I'm</font>
+          
           <h1 class="mb-0">Nawaffarras
             <span class="text-primary">Mahendika</span>
           </h1>
