--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <div class="subheading mb-5">Hi there, I'm</div>
+          <font size="7" class="subheading mb-5">Hi there, I'm</font>
           
           <h1 class="mb-0">Nawaffarras
             <span class="text-primary">Mahendika</span>
