--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
           <h1 class="mb-0">Nawaffarras
             <span class="text-primary">Mahendika</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <div class="subheading mb-5">+6281 6688 675 ·
+            <a href="mailto:nawafarass@email.com">nawafarass@email.com</a>
           </div>
           <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <div class="social-icons">
-            <a href="#">
+            <a href="linked.in/in/nawafaras">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#">
+            <a href="github.io/nawafaras">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
+            <a href="twitter.com/nwfrs_">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#">
+            <a href="facebook.com/nawafaras">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
