--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
           </div>
           <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <div class="social-icons">
-            <a href="linked.in/in/nawafaras">
+            <a href="https://www.linkedin.com/in/nawafaras/">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="github.io/nawafaras">
+            <a href="https://github.io/nawafaras/">
               <i class="fab fa-github"></i>
             </a>
-            <a href="twitter.com/nwfrs_">
+            <a href="https://twitter.com/nwfrs_">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="facebook.com/nawafaras">
+            <a href="https://www.facebook.com/nawafaras">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
