--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <div class="mb-5">Hi there, I'm</div>
+          <font class="subheading mb-5">Hi there, I'm</font>
           
           <h1 class="mb-0">Nawaffarras
             <span class="text-primary">Mahendika</span>
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">+6281 6688 675 ·
             <a href="mailto:nawafarass@email.com">nawafarass@email.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">Telecommunications Engineering Student at Institut Teknologi Bandung</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/nawafaras/">
               <i class="fab fa-linkedin-in"></i>
