--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">+6281 6688 675 ·
             <a href="mailto:nawafarass@email.com">nawafarass@email.com</a>
           </div>
-          <p class="lead mb-5">Telecommunications Engineering Student at Institut Teknologi Bandung</p>
+          <p class="lead mb-5">I'm a Telecommunications Engineering Student at Institut Teknologi Bandung</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/nawafaras/">
               <i class="fab fa-linkedin-in"></i>
