--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               Huawei Certified Network Associate - Routing & Switching</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Participant - Huawei ICT Competition Indonesia 2018-2019</li>
+              Huawei ICT Competition Indonesia 2018-2019 Participant</li>
           </ul>
         </div>
       </section>
