--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>Apart from being a student, I enjoy most of my time being outdoors. I am a landscape and human interest photographer. </p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an guitar player, and I spend a large amount of my free time exploring the latest technology.</p>
+          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an guitar player, and I spend a large amount of my free time exploring the latest technology advancements.</p>
         </div>
       </section>
 
