--- a/index.html
+++ b/index.html
@@ -219,6 +219,9 @@
             <li class="list-inline-item">
               <i class="fab fa-npm"></i>
             </li>
+            <li class="list-inline-item">
+              <i class="fab fa-office"></i>
+            </li>
           </ul>
 
           <div class="subheading mb-3">Workflow</div>
