--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <i class="fab fa-npm"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fas fa-microsoft"></i>
+              <i class="fab fa-microsoft"></i>
             </li>
           </ul>
 
