--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">MAN Insan Cendekia Serpong</h3>
+              <div class="subheading mb-3">Science Major</div>
+              <!--<p>GPA: 3.23</p>-->
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">July 2013 - May 2016</span>
             </div>
           </div>
 
+          <!--
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">James Buchanan High School</h3>
@@ -170,7 +170,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2002 - May 2006</span>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </section>
@@ -182,6 +182,7 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <!--
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
@@ -222,8 +223,9 @@
             <li class="list-inline-item">
               <i class="fab fa-microsoft"></i>
             </li>
-          </ul>
+          </ul> -->
 
+          <!--
           <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
@@ -239,7 +241,7 @@
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Scrum</li>
           </ul>
-        </div>
+        </div> -->
       </section>
 
       <hr class="m-0">
