--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Clarence Taylor</span>
+        <span class="d-block d-lg-none">Nawaffarras Mahendika</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/7212.jpg" alt="">
         </span>
@@ -69,7 +69,7 @@
             <span class="text-primary">Mahendika</span>
           </h1>
           <div class="subheading mb-5">+6281 6688 675 ·
-            <a href="mailto:nawafarass@email.com">nawafarass@email.com</a>
+            <a href="mailto:nawafarass@gmail.com">nawafarass@gmail.com</a>
           </div>
           <p class="lead mb-5">I'm a Telecommunications Engineering Student at Institut Teknologi Bandung</p>
           <div class="social-icons">
