--- a/index.html
+++ b/index.html
@@ -141,6 +141,18 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Institut Teknologi Bandung</h3>
+              <div class="subheading mb-3">Bachelor of Engineering</div>
+              <div>Telecommunications Engineering</div>
+              <!--<p>GPA: 3.23</p>-->
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2016 - Present</span>
+            </div>
+          </div>
+          
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">MAN Insan Cendekia Serpong</h3>
               <div class="subheading mb-3">Science Major</div>
               <!--<p>GPA: 3.23</p>-->
