--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <img src="https://img.icons8.com/ios/96/000000/c-plus-plus-logo-filled.png">
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
@@ -184,6 +185,11 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <ul class="list-inline dev-icons">
+            <li class="list-inline-item">
+              <a href="https://icons8.com/icon/55199/c++-filled"></a>
+            </li>
+          </ul>
           <!--
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
