--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline dev-icons">
-            <li class="list-inline-item">
-              <a href="https://icons8.com/icon/55199/c++-filled"></a>
+          <ul>
+            <li>
+              <i href="https://icons8.com/icon/55199/c++-filled"></i>
             </li>
           </ul>
           <!--
