--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul>
             <li>
-              <i href="https://icons8.com/icon/55199/c++-filled"></i>
+              <a href="https://icons8.com/icon/55199/c++-filled">C++ Filled icon by Icons8</a>
             </li>
           </ul>
           <!--
