--- a/index.html
+++ b/index.html
@@ -185,11 +185,13 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul>
-            <li>
-              <a href="https://icons8.com/icon/55199/c++-filled">C++ Filled icon by Icons8</a>
+           <ul class="list-inline dev-icons">
+            <li class="list-inline-item">
+              <i class="fab fa-python"></i>
             </li>
+            
           </ul>
+          
           <!--
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
