--- a/index.html
+++ b/index.html
@@ -185,10 +185,20 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-           <ul class="list-inline dev-icons">
-            <li class="list-inline-item">
-              <i class="fab fa-python"></i>
-            </li>
+           <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              C++</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Pascal</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Adobe Premiere Pro</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Microsoft Office</li>
+          </ul>
             
           </ul>
           
